# Russian-Speaking

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DEPLOY.md  PROJECT_OVERVIEW.md  README.md  UPGRADE_PLAN.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  celerybeat-schedule  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4e4d8fa6d59b_init.py  57d244c75a31_add_topic_and_preferred_language.py  9a1299de938d_add_admin_role_to_enum.py  a1b2c3000001_submission_model_answer.py  a1b2c3000002_user_telegram.py  a1b2c3000003_question_blocks.py  a1b2c3d4e5f6_add_transcript_pronunciation.py  a7b8c9d0e1f2_scores_100_scale_and_level_score.py  aa11bb22cc33_app_settings.py  b2c3d4e5f6a7_question_soft_delete.py  b8c9d0e1f2a3_task_visibility_and_submission_assignment.py  bb22cc33dd44_user_avatar.py  bdb587957991_add_relevance_score_to_evaluations.py  c0ffee000001_integrate_features.py  c1a2b3d4e5f6_add_premium_and_google.py  c1d2e3f4a5b6_module_visibility_publish_cover.py  c3d4e5f6a7b8_shadowing.py  c9d0e1f2a3b4_add_user_phone.py  d1e2f3a4b5c6_add_question_instruction.py  d2e3f4a5b6c7_gamification_assignments_reviews.py  d4e5f6a7b8c9_notifications.py  dc74c9831f93_add_topic_images.py  e1f2a3b4c5d6_add_blocks.py  e3f4a5b6c7d8_groups_teacher_feedback.py  e5f6a7b8c9d0_add_delivery_subscores_and_native_likeness.py  f2a3b4c5d6e7_add_question_sort_order.py  f4a5b6c7d8e9_assignment_group_id.py  f6a7b8c9d0e1_add_user_age_address.py  f7a8b9c0d1e2_add_shadowing_phrases.py  (+1 more)
backend/app/: main.py
backend/tests/: test_units.py
(+173 files in other folders)
